feature: 로그인 사용자정보 가져오기 기능 추가

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -157,3 +157,27 @@ include::{path}/http-request.adoc[]
 Response HTTP Example:
 
 include::{path}/http-response.adoc[]
+
+=== GET /users/me
+
+로그인한 사용자를 정보를 가져온다
+
+==== Request
+:path: {snippets}/myinfo
+
+CURL:
+
+include::{path}/curl-request.adoc[]
+
+Request Header:
+include::{path}/request-headers.adoc[]
+
+
+Request HTTP Example:
+include::{path}/http-request.adoc[]
+
+==== Response
+
+Response HTTP Example:
+
+include::{path}/http-response.adoc[]
